bin/tests/sema/sema6.swg



const A: s32 // swc-expected-error {{sema_err_const_missing_init}}
